changes on header

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -145,7 +145,39 @@ button {
     cursor: pointer;
 }
 
+/*   FONTS   */
 
+@font-face {
+    font-family: 'D-DIN';
+    src: url('../fonts/D-DIN.woff2') format('woff2'),
+         url('../fonts/D-DIN.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'D-DIN';
+    src: url('../fonts/D-DIN-Bold.woff2') format('woff2'),
+         url('../fonts/D-DIN-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'D-DINCondensed';
+    src: url('../fonts/D-DINCondensed.woff2') format('woff2'),
+         url('../fonts/D-DINCondensed.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'D-DINCondensed';
+    src: url('../fonts/D-DINCondensed-Bold.woff2') format('woff2'),
+         url('../fonts/D-DINCondensed-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
 
 /*   GLOBALS   */
 :root {
@@ -155,4 +187,19 @@ button {
     --infantil: #4d9e45;
     --junior: #D32F2F;
     --senior: #6A1B9A;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+::selection {
+    background-color: var(--main-color);
+    color: var(--text-color);
+}
+
+body {
+    font-family: 'D-DIN', sans-serif;
+    font-size: 16px;
+    color: var(--text-color);
 }
