--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,20 +1,21 @@
 header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
+  box-sizing: border-box;
   padding: 12px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: transparent;
   z-index: 90;
-  box-sizing: border-box;
 }
 
 .logo {
-  height: 40px;
+  height: 48px;
   z-index: 100;
+  fill: white;
 }
 
 .oride {
@@ -23,32 +24,28 @@ header {
 
 .menu-button {
   cursor: pointer;
-  padding: 0;
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1001;
+  z-index: 100;
 }
 
 .navigation {
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100dvh;
   background-color: var(--main-color);
   display: flex;
-  opacity: 0;
-  transition: opacity 0.5s ease;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
 }
 
 .navigation.open {
-  opacity: 1;
+  right: 0;
 }
 
 .navigation ul {
@@ -63,17 +60,31 @@ header {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
-  display: block;
   padding: 10px 0;
 }
 
-.menu-open {
-  background-color: transparent;
+.navigation li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navigation svg {
+  fill: var(--text-color);
+  width: 24px;
 }
 
 @media (min-width: 768px) {
   header {
     padding: 16px 32px;
+  }
+
+  .oride {
+    display: block;
+  }
+
+  .logo {
+    height: 56px;
   }
   
   .menu-button {
@@ -90,19 +101,35 @@ header {
   
   .navigation ul {
     flex-direction: row;
-    gap: 4vw;
+    gap: 5vw;
     text-align: left;
   }
   
   .navigation a {
     font-size: 16px;
+    color: white;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: var(--main-color);
+    }
+  }
+
+  .navigation svg {
+    fill: white;
+    width: 20px;
+    transition: fill 0.3s ease;
+
+    &:hover {
+      fill: var(--main-color);
+    }
   }
 }
 
 .hero {
   position: relative;
   width: 100%;
-  height: 130dvh;
+  height: 100dvh;
   overflow: hidden;
 }
 
@@ -128,7 +155,7 @@ header {
 }
 
 .hero-content h1 {
-  font-size: 6rem;
+  font-size: 4rem;
   text-transform: uppercase;
   margin: 0;
   text-align: left;
