--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,37 +1,38 @@
 .header__logo{
-  display:inline-flex
+  display: inline-flex;
+  align-items: center;
 }
 
 .header__logo .oride{
-  display:none
+  display: none;
 }
 
 .header__wrapper{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:8px 16px;
-  background-color:rgba(255,255,255,.9);
-  border-bottom:2px solid var(--main-color);
-  position:fixed;
-  width:100%;
-  z-index:100
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+  background-color: rgba(255,255,255,.9);
+  border-bottom: 2px solid var(--main-color);
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
 .header__menu{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  gap:40px;
-  text-align:center;
-  text-transform:uppercase;
-  font-family:'D-DINCondensed',sans-serif;
-  font-weight:bold;
-  font-size:20px;
-  position:fixed;
-  width:100dvw;
-  height:100dvh;
-  background-color:var(--main-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'D-DINCondensed',sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  position: fixed;
+  width: 100dvw;
+  height: 100dvh;
+  background-color: var(--main-color);
   top: 0;
   right: -100%;
   opacity: 0;
@@ -42,29 +43,108 @@
 }
 
 .header__nav{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100%
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%
 }
 
 .header__nav ul{
-  display:flex;
-  flex-direction:column;
-  gap:16vw
+  display: flex;
+  flex-direction: column;
+  gap: 16vw;
 }
 
 .header__nav ul li,
 .header__controls a {
   opacity: 0;
   transform: translateX(30px);
+  fill: var(--text-color);
+
+  &:hover {
+    color: var(--main-color);
+    fill: var(--main-color);
+  }
 }
 
 .header__controls{
-  position:absolute;
-  bottom:2rem;
-  width:100%;
-  display:flex;
-  justify-content:center;
-  gap:24px
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+@media (min-width: 768px) {
+  .header__logo .oride{
+    display: flex;
+  }
+}
+
+@media (min-width: 1024px) {
+  .burger-menu {
+    display: none;
+  }
+  
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 16px;
+    background-color: rgba(255,255,255,.9);
+    border-bottom: 2px solid var(--main-color);
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+  }
+
+  .header__wrapper {
+    position: static;
+    background-color: transparent;
+    border: none;
+    width: fit-content;
+    padding: 0;
+  }
+
+  .header__menu{
+    position: static;
+    flex-direction: row;
+    align-items: center;
+    gap: 20vw;
+    text-align: center;
+    font-size: 20px;
+    width: fit-content;
+    height: fit-content;
+    background-color: transparent;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    z-index: 90;
+  }
+  
+  .header__nav{
+    height: fit-content;
+  }
+  
+  .header__nav ul{
+    flex-direction: row;
+    gap: 8vw;
+  }
+  
+  .header__nav ul li,
+  .header__controls a {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  
+  .header__controls{
+    position: static;
+    bottom: auto;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    gap: 2vw;
+  }
 }
