header como si fuese un componente que flota, mas estilo app

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,9 +13,11 @@
   align-items: center;
   padding: 8px 16px;
   background-color: rgba(255,255,255,.9);
-  border-bottom: 2px solid var(--main-color);
+  border: 2px solid var(--main-color);
+  border-radius: 24px;
+  margin: 16px;
   position: fixed;
-  width: 100%;
+  width: calc(100% - 32px);
   z-index: 100;
 }
 
@@ -23,12 +25,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
   text-align: center;
   text-transform: uppercase;
   font-family: 'D-DINCondensed',sans-serif;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 24px;
   position: fixed;
   width: 100dvw;
   height: 100dvh;
@@ -52,7 +53,7 @@
 .header__nav ul{
   display: flex;
   flex-direction: column;
-  gap: 16vw;
+  gap: 10vh;
 }
 
 .header__nav ul li,
@@ -60,6 +61,7 @@
   opacity: 0;
   transform: translateX(30px);
   fill: var(--text-color);
+  transition: color 0.3s ease, fill 0.3s ease, transform 0.3s ease; /* Added smooth transition */
 
   &:hover {
     color: var(--main-color);
@@ -92,11 +94,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 16px;
+    margin: 16px;
+    padding: 0px 40px;
     background-color: rgba(255,255,255,.9);
-    border-bottom: 2px solid var(--main-color);
+    border: 1px solid var(--main-color);
+    border-radius: 24px;
     position: fixed;
-    width: 100%;
+    width: calc(100% - 32px);
     z-index: 100;
   }
 
@@ -111,9 +115,7 @@
   .header__menu{
     position: static;
     flex-direction: row;
-    align-items: center;
-    gap: 20vw;
-    text-align: center;
+    gap: 16vw;
     font-size: 20px;
     width: fit-content;
     height: fit-content;
@@ -130,13 +132,14 @@
   
   .header__nav ul{
     flex-direction: row;
-    gap: 8vw;
+    gap: 6vw;
   }
   
   .header__nav ul li,
   .header__controls a {
     opacity: 1;
     transform: translateX(0);
+    transition: color 0.2s ease, fill 0.2s ease;
   }
   
   .header__controls{
