--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -11,10 +11,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 16px;
+  padding: 8px 24px;
   background-color: rgba(255,255,255,.9);
   border: 2px solid var(--main-color);
-  border-radius: 24px;
+  border-radius: 70px;
   margin: 16px;
   position: fixed;
   width: calc(100% - 32px);
@@ -61,7 +61,7 @@
   opacity: 0;
   transform: translateX(30px);
   fill: var(--text-color);
-  transition: color 0.3s ease, fill 0.3s ease, transform 0.3s ease; /* Added smooth transition */
+  transition: color 0.3s ease, fill 0.3s ease;
 
   &:hover {
     color: var(--main-color);
@@ -77,6 +77,11 @@
   justify-content: center;
   align-items: center;
   gap: 24px;
+}
+
+.header__controls a {
+  display: flex;
+  align-items: center;
 }
 
 @media (min-width: 768px) {
@@ -95,10 +100,10 @@
     justify-content: space-between;
     align-items: center;
     margin: 16px;
-    padding: 0px 40px;
+    padding: 8px 40px;
     background-color: rgba(255,255,255,.9);
-    border: 1px solid var(--main-color);
-    border-radius: 24px;
+    border: 2px solid var(--main-color);
+    border-radius: 70px;
     position: fixed;
     width: calc(100% - 32px);
     z-index: 100;
@@ -110,6 +115,7 @@
     border: none;
     width: fit-content;
     padding: 0;
+    margin: 0;
   }
 
   .header__menu{
@@ -139,7 +145,6 @@
   .header__controls a {
     opacity: 1;
     transform: translateX(0);
-    transition: color 0.2s ease, fill 0.2s ease;
   }
   
   .header__controls{
@@ -149,5 +154,87 @@
     display: flex;
     justify-content: center;
     gap: 2vw;
+  }
+}
+
+/* HOME HERO */
+.home-hero {
+  width: 100dvw;
+  height: 100dvh;
+  background-image: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,.9) 100%), url('../images/hero-home.jpeg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.home-hero__content {
+  position: absolute;
+  bottom: 1rem;
+  padding: 0 16px;
+}
+
+@media (min-width: 768px) {
+  .home-hero__content {
+    width: 60%;
+    padding: 0 40px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .home-hero__content {
+    bottom: 2rem;
+    padding: 0 64px;
+  }
+}
+
+/* SNIPPET BUTTON */
+
+.button {
+  background-color: var(--main-color);
+  color: var(--text-color);
+  padding: 10px 20px;
+  margin: 16px 0;
+  border-radius: 16px;
+  font-family: 'D-DINCondensed';
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: left;
+  display: flex;
+  gap: .5rem;
+
+  svg path {
+      transition: transform 0.3s ease-in-out;
+  }
+
+  &:hover svg path {
+      transform: translateX(6px);
+  }
+}
+
+/* SNIPPET CLASE GRATIS */
+
+.clase_gratis {
+  position: absolute;
+  width: 30vh;
+  height: auto;
+  top: 100px;
+  right: 24px;
+  z-index: 10;
+}
+
+.clase_gratis img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  position: relative;
+}
+
+@media (min-width: 1024px) {
+  .clase_gratis {
+    top: 120px;
+    right: 40px;
+    width: 45vh;
   }
 }
