--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -191,10 +191,10 @@
 
 .button {
   background-color: var(--main-color);
-  color: var(--text-color);
+  color: #1d1d1b; /* sin variable para poder hacer theme:dark */
   padding: 10px 20px;
-  margin: 16px 0;
-  border-radius: 16px;
+  margin: 1rem 0;
+  border-radius: 1rem;
   font-family: 'D-DINCondensed';
   font-weight: bold;
   font-size: 18px;
@@ -237,4 +237,151 @@
     right: 40px;
     width: 45vh;
   }
+}
+
+/* SECTION INTRO + IMAGE */
+
+.intro {
+  text-wrap: balance;
+  grid-column: span 4;
+  margin: auto 0;
+}
+
+.subtitle {
+  font-family: 'D-DINCondensed';
+  font-size: 20px;
+  text-transform: uppercase;
+  color: var(--main-color);
+  padding-bottom: .5rem;
+}
+
+.intro-img{
+  grid-column: span 4;
+}
+
+@media (min-width: 1024px){
+  .intro, .intro-img {
+    grid-column: span 6;
+  }
+}
+
+/* SECTION INTRO CENTERED */
+
+.intro-center {
+  text-align: center;
+  text-wrap: balance;
+  grid-column: span 4;
+}
+
+@media (min-width:768px){
+  .intro-center {
+    grid-column: 2 / span 6;
+  }
+}
+
+@media (min-width:1024px){
+  .intro-center {
+    grid-column: 4 / span 6;
+  }
+}
+
+/* SECTION PROGRAMAS */
+
+.program {
+  grid-column: span 2;
+}
+
+@media (min-width: 1024px) {
+  .program {
+    grid-column: span 3;
+  }
+}
+
+.ar-9-14 {
+  aspect-ratio: 9 / 14;
+}
+
+.ar-9-14 img {
+  filter: grayscale(100%);
+}
+
+.image::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 24px;
+  z-index: 10;
+  transition: opacity 0.4s ease;
+}
+
+.peques:hover::after {
+  opacity: .2;
+}
+
+.infantil:hover::after {
+  opacity: .2;
+}
+
+.junior:hover::after {
+  opacity: .2;
+}
+
+.senior:hover::after {
+  opacity: .2;
+}
+
+@media (min-width: 768px) {
+  .peques, .junior {
+    grid-column: 3 / span 2;
+  }
+}
+
+@media (min-width: 1024px) {
+  .peques, .junior {
+    grid-column: 4 / span 3;
+  }
+}
+
+.peques::after {
+  background-color: var(--peques);
+  opacity: .4;
+}
+
+.peques p {
+  color: var(--peques);
+}
+
+.infantil::after {
+  background-color: var(--infantil);
+  opacity: .4;
+}
+
+.infantil p {
+  color: var(--infantil);
+}
+
+.junior::after {
+  background-color: var(--junior);
+  opacity: .4;
+}
+
+.junior p {
+  color: var(--junior);
+}
+
+.senior::after {
+  background-color: var(--senior);
+  opacity: .4;
+}
+
+.senior p {
+  color: var(--senior);
+}
+
+.program-heading {
+  padding: 1rem;
+  text-transform: uppercase;
 }
