--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -312,9 +312,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border-radius: 24px;
+  border-radius: 1rem;
   z-index: 10;
   transition: opacity 0.4s ease;
+}
+
+@media (min-width: 768px) {
+  .image::after {
+    border-radius: 1.5rem;
+  }
 }
 
 .peques:hover::after {
