--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -317,19 +317,25 @@ h3 {
     object-fit: contain;
     width: 100%;
     height: 100%;
-    border-radius: 24px;
+    border-radius: 1rem;
 }
 
 .cover {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: 24px;
+    border-radius: 1rem;
 }
 
 .fill {
     object-fit: fill;
     width: 100%;
     height: 100%;
-    border-radius: 24px;
+    border-radius: 1rem;
+}
+
+@media (min-width: 768px) {
+    .contain, .cover, .fill {
+        border-radius: 1.5rem;
+    }
 }
