contact section iframe google-maps

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -224,6 +224,10 @@
   margin: auto 0;
 }
 
+.intro a:hover {
+  color: var(--main-color);
+}
+
 .subtitle {
   font-family: 'D-DINCondensed';
   font-size: 20px;
@@ -530,3 +534,42 @@
     grid-column: 2 / span 10;
   }
 }
+
+/* SECTION CONTACT */
+
+.contact-links {
+  display: inline-flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+@media (min-width: 768px) {
+ .contact-links {
+    gap:1rem;
+  }
+}
+
+.mapa {
+  grid-column: span 4;
+}
+
+.mapa iframe {
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--main-color);
+  border-radius: 1rem;
+  aspect-ratio: 16 / 9;
+}
+
+@media (min-width: 1024px) {
+  .mapa {
+    grid-column: span 6;
+  }
+  
+  .mapa iframe {
+    border-radius: 1.5rem;
+  }
+}
+
+/* SECTION GALERÍA */
+
