--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -216,7 +216,7 @@
   }
 }
 
-/* SECTION INTRO + IMAGE */
+/* INTRO + IMAGE */
 
 .intro {
   text-wrap: balance;
@@ -246,7 +246,7 @@
   }
 }
 
-/* SECTION INTRO CENTERED */
+/* INTRO-CENTERED */
 
 .intro-center {
   text-align: center;
@@ -266,7 +266,7 @@
   }
 }
 
-/* SECTION PROGRAMAS */
+/* PROGRAMAS */
 
 .program_wrapper {
   grid-column: span 4;
@@ -307,11 +307,7 @@
     height: auto;
   }
 
-  .program_wrapper:hover .program {
-    width: 20%;
-  }
-
-  .program_wrapper .program:hover {
+  .program:hover {
     width: 40%;
   }
 }
@@ -410,7 +406,7 @@
   text-align: center;
 }
 
-/* SECTION SHOP */
+/* SHOP */
 
 .shop_wrapper {
   grid-column: span 4;
@@ -495,7 +491,7 @@
   padding: 1rem;
 }
 
-/* SECTION  CTA */
+/*  CTA */
 
 .cta-section {
   grid-column: span 4;
@@ -526,7 +522,7 @@
   align-self: center;
 }
 
-/* SECTION  CTA */
+/* IMAGE FULL-WIDTH */
 
 .full-img {
   grid-column: span 4;
@@ -545,7 +541,7 @@
   }
 }
 
-/* SECTION CONTACT */
+/* CONTACT */
 
 .contact-links {
   display: inline-flex;
@@ -581,7 +577,7 @@
   }
 }
 
-/* SECTION GALERÍA */
+/* GALLERY */
 
 .gallery {
   grid-column: span 4;
@@ -625,7 +621,7 @@
   }
 }
 
-/* LIGHTBOX */
+/* Lightbox */
 .lightbox {
   position: fixed;
   top: 0;
@@ -717,4 +713,67 @@
 
 .lightbox__nav-next {
   margin-left: auto;
+}
+
+/* INTRUCTORES */
+
+.instructor_wrapper {
+  grid-column: span 4;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+} 
+
+.instructor {
+  grid-column: span 2;
+  padding: 0 .5rem;
+}
+
+@media (min-width: 768px) {
+  .instructor_wrapper {
+    grid-column: span 8;
+    grid-template-columns: repeat(8, 1fr);
+  }
+
+  .instructor {
+    grid-column: span 3;
+  }
+
+  .instructor:nth-child(1) {
+    grid-column: 2 / span 3;
+  }
+}
+
+@media (min-width: 1024px) {
+  .instructor_wrapper {
+    grid-column: span 12;
+    display: flex;
+    justify-content: center;
+  }
+
+  .instructor {
+    width: 25%;
+    transition: width 0.4s cubic-bezier(0.29, 1.31, 0.64, 1);
+    height: auto;
+  }
+
+  .instructor:hover {
+    width: 40%;
+  }
+}
+
+.groc:hover::after {
+  opacity: .2;
+}
+
+.groc::after {
+  background-color: var(--main-color);
+  opacity: .4;
+}
+
+.instructor-bio {
+  padding: 1rem;
+}
+
+.instructor-bio h3 {
+  margin-bottom: .5rem;
 }
