--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -188,8 +188,8 @@ button {
     --infantil: #4d9e45;
     --junior: #D32F2F;
     --senior: #6A1B9A;
-    --padding-x: 16px;
-    --padding-y: 40px;
+    --padding-x: 1rem;
+    --padding-y: 2.5rem;
 }
 
 [data-theme="dark"] {
@@ -199,17 +199,17 @@ button {
 
 @media (min-width: 768px) {
     :root {
-      --padding-x: 40px;
-        --padding-y: 56px;
+        --padding-x: 2.5rem;
+        --padding-y: 3.5rem;
     }
-  }
+}
   
-  @media (min-width: 1024px) {
+@media (min-width: 1024px) {
     :root {
-      --padding-x: 64px;
-      --padding-y: 80px;
+        --padding-x: 4rem;
+        --padding-y: 5rem;
     }
-  }
+}
 
 * {
     box-sizing: border-box;
