header in liquid

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -28,10 +28,10 @@
     <div class="header__menu">
         <nav class="header__nav">
             <ul>
-                <li><a href="#">La escuela</a></li>
-                <li><a href="#">Programas</a></li>
-                <li><a href="#">Tienda</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="{{ shop.url }}/la-escuela">La escuela</a></li>
+                <li><a href="{{ shop.url }}/programas">Programas</a></li>
+                <li><a href="{{ shop.url }}/tienda">Tienda</a></li>
+                <li><a href="{{ shop.url }}/contacto">Contacto</a></li>
             </ul>
         </nav>
         <div class="header__controls">
